# sentalign

./: MANIFEST.in  README.md  __init__.py  pyproject.toml  sentalign.py  setup.py
examples/: complex_french_english_demo.py  english_french_demo.py
sentalign.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: en_texts.txt  en_wrong.txt  nl_texts.txt  test_custom.py  test_sentalign.py
